add dep ppx_tools_versioned

--- a/ppx_lwts.opam
+++ b/ppx_lwts.opam
@@ -16,6 +16,7 @@ build: [
 ]
 depends: [
   "ocaml-migrate-parsetree" {>="0.6"}
+  "ppx_tools_versioned"
   "jbuilder" {build}
 ]
 available: [ocaml-version >= "4.02.3"]
